# syft-llm-router

./: .gitignore  .pre-commit-config.yaml  README.md  example.env  publish.md  pyproject.toml  run.sh  run_frontend.sh
app/api/: dependencies.py  router.py
app/components/dashboard/: models.py  repository.py  schemas.py  services.py
app/components/router/: services.py
app/templates/: index.html
backend/: app.py  build_frontend.sh  db.py  main.py  publish.py  requirements.txt  routers.db  run.sh  serializer.py
backend/accounting/: api.py  manager.py  models.py  repository.py  schemas.py
backend/accouting/: manager.py  schemas.py
backend/assets/js/: syftbox-sdk.js
backend/generator/: service.py
backend/generator/common/: base_services.py  config.py  schema.py  server.py
backend/generator/templates/custom/: chat_service.py  search_service.py  spawn_services.py
backend/generator/templates/default/: chat_service.py  search_service.py  spawn_services.py
backend/router/: api.py  constants.py  exceptions.py  manager.py  models.py  publish.py  repository.py  schemas.py  service.py  utils.py
backend/router_generator/: QUICK_START.md  README.md  generate.py  test_generation.py  test_simplified_config.py
backend/router_generator/common/: base_services.py  config.py  schema.py  server.py
backend/router_generator/templates/custom/: config.py  search_service.py  spawn_services.py
backend/router_generator/templates/default/: chat_service.py  config.py  search_service.py  spawn_services.py
backend/settings/: app_settings.py
backend/shared/: database.py  exceptions.py
backend/static/: index.html
backend/static/assets/: index-B55702XB.js  index-By5SbeXu.js  index-C48GxkZ9.css  index-DCR404vu.js  index-DXofPPUx.js  index-DZ1FixqA.js  index-De_WSl4f.js
discover/: ReadME.md  main.py  run.sh
examples/claude/: README.md  accounting.py  chat_test.py  pyproject.toml  router.py  run.sh  server.py
examples/deepseek/: chat_test.py  pyproject.toml  router.py  run.sh  server.py
examples/llm-router-accounting/: accounting.py  chat_test.py  pyproject.toml  router.py  run.sh  server.py
examples/mixtral/: README.md  ReadMe.md  chat_test.py  pyproject.toml  router.py  run.sh  server.py
examples/openai/: README.md  chat_request.py  router.py  server.py
examples/phi4router/: README.md  chat_test.py  pyproject.toml  router.py  server.py
examples/pingpong/: approve_request.py  grant_request.py  permissions_middleware.py  ping_request.py  pong_server.py  pyproject.toml  run.sh
examples/rag-app/: README.md  chat_test.py  pyproject.toml  router.py  run.sh  server.py
examples/simple-ensemble/: chat_test.py  ensemble.py  pyproject.toml  router.py  server.py
frontend/: ACCOUNT_FLOW.md  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/chat/: ChatPage.tsx
frontend/src/components/router/: AssignGatekeeperModal.tsx  CreateRouterModal.tsx  GatekeeperActivityTab.tsx  GatekeeperPricingTab.tsx  PublishRouterModal.tsx  (+2 more)
frontend/src/hooks/: useDelegateStatus.ts  useRouterHealth.ts
frontend/src/services/: accountingService.ts  chatService.ts  delegateStatusService.ts  routerService.ts
frontend/src/types/: router.ts
frontend/src/utils/: clipboard.ts  constants.ts
router_generator/: QUICK_START.md  README.md  generate.py  test_generation.py
router_generator/common/: base_services.py  schema.py  server.py
router_generator/templates/custom/: chat_service.py  config.py  retrieve_service.py
router_generator/templates/default/: chat_service.py  config.py  retrieve_service.py
router_template/: run.sh  server.py
src/syft_llm_router/: __init__.py  cli.py  error.py  publish.py  publish_utils.py  router.py  schema.py
src/syft_llm_router/extras/: rate_limiter.py
src/syft_llm_router/schema2/: __init__.py  schema_generator.py  type_utils.py
src/syft_llm_router/specs/: llm-spec.json
src/syft_llm_router/templates/: chat_test.py.tmpl  provider.py.tmpl  pyproject.toml.tmpl  router.py.tmpl  server.py.tmpl
(+12 files in other folders)
