[project]
name = "syft-llm-router"
version = "0.1.0"
description = "Syft LLM Router Protocol"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "fastsyftbox>=0.1.18",
    "ipython>=8.18.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.2",
    "requests>=2.32.3",
    "typer>=0.15.2",
]

[tool.uv]
dev-dependencies = [
    "openai>=1.70.0",
]
